<resources>
    <string name="app_name">Cashbook</string>
    <string name="action_settings">Settings</string>
    <string name="title_account">Accounts</string>
    <string name="title_categories">Categories</string>
    <string name="title_cashbook">Cashbook</string>
    <string name="title_save">Save</string>
    <string name="title_category">Category</string>
    <string name="title_name">Name</string>
    <string name="title_account_name">Account Name</string>
    <string name="title_memo">Memo</string>
    <string name="title_debit">Debit</string>
    <string name="title_credit">Credit</string>
    <string name="title_quantity">Quantity</string>
</resources>