<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="secondaryClickHandler"
            type="com.example.cashbook.MainActivity.ActivityClickHandlers" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/linearLayoutOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >
    <Button
        android:id="@+id/buttonCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_categories"
        android:onClick="@{secondaryClickHandler::categoriesClicked}"
        />

    <Button
        android:id="@+id/buttonAccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_account"
        android:onClick="@{secondaryClickHandler::accountsClicked}"
        />

    <Button
        android:id="@+id/buttonCashbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_cashbook"
        android:onClick="@{secondaryClickHandler::cashbookClicked}"
        />
    </LinearLayout>
</LinearLayout>
</layout>